wwpdb/utils/nmr/cpp_src/AriaMRParser.cpp

// Generated from /data/git/py-wwpdb_utils_nmr/wwpdb/utils/tests-nmr/antlr-grammars-v4.10/AriaMRParser.g4 by ANTLR 4.13.2


#include "AriaMRParserVisitor.h"

#include "AriaMRParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct AriaMRParserStaticData final {
  AriaMRParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  AriaMRParserStaticData(const AriaMRParserStaticData&) = delete;
  AriaMRParserStaticData(AriaMRParserStaticData&&) = delete;
  AriaMRParserStaticData& operator=(const AriaMRParserStaticData&) = delete;
  AriaMRParserStaticData& operator=(AriaMRParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

::antlr4::internal::OnceFlag ariamrparserParserOnceFlag;
#if ANTLR4_USE_THREAD_LOCAL_CACHE
static thread_local
#endif
std::unique_ptr<AriaMRParserStaticData> ariamrparserParserStaticData = nullptr;

void ariamrparserParserInitialize() {
#if ANTLR4_USE_THREAD_LOCAL_CACHE
  if (ariamrparserParserStaticData != nullptr) {
    return;
  }
#else
  assert(ariamrparserParserStaticData == nullptr);
#endif
  auto staticData = std::make_unique<AriaMRParserStaticData>(
    std::vector<std::string>{
      "aria_mr", "distance_restraints", "distance_restraint", "contribution", 
      "atom_pair", "atom_selection", "old_distance_restraints", "old_distance_restraint", 
      "p_row", "a_row", "c_row", "number", "number_c"
    },
    std::vector<std::string>{
      "", "','", "", "", "", "", "", "", "'ref_spec:'", "'ref_peak:'", "'id:'", 
      "'d:'", "'u:'", "'u_viol:'", "'%_viol:'", "'viol:'", "'reliable:'", 
      "'a_type:'", "'weight:'", "'+/-'", "'-'", "'p'", "'a'", "'c'"
    },
    std::vector<std::string>{
      "", "COMMA", "Integer", "Float", "Real", "SHARP_COMMENT", "EXCLM_COMMENT", 
      "SMCLN_COMMENT", "RefSpec", "RefPeak", "Id", "D", "U", "UViol", "PViol", 
      "Viol", "Reliable", "AType", "Weight", "PlusMinus", "Hyphen", "P_code", 
      "A_code", "C_code", "Simple_name", "SPACE", "ENCLOSE_COMMENT", "SECTION_COMMENT", 
      "LINE_COMMENT", "SPACE_RS", "RefSpecName", "RETURN_RS", "SPACE_V", 
      "ViolFlag", "RETURN_V", "SPACE_R", "ReliableFlag", "RETURN_R", "SPACE_A", 
      "ATypeFlag", "RETURN_A"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  ariamrparserParserStaticData = std::move(staticData);
}

}

AriaMRParser::AriaMRParser(TokenStream *input) : AriaMRParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

AriaMRParser::AriaMRParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  AriaMRParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *ariamrparserParserStaticData->atn, ariamrparserParserStaticData->decisionToDFA, ariamrparserParserStaticData->sharedContextCache, options);
}

AriaMRParser::~AriaMRParser() {
  delete _interpreter;
}

const atn::ATN& AriaMRParser::getATN() const {
  return *ariamrparserParserStaticData->atn;
}

std::string AriaMRParser::getGrammarFileName() const {
  return "AriaMRParser.g4";
}

const std::vector<std::string>& AriaMRParser::getRuleNames() const {
  return ariamrparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& AriaMRParser::getVocabulary() const {
  return ariamrparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView AriaMRParser::getSerializedATN() const {
  return ariamrparserParserStaticData->serializedATN;
}


//----------------- Aria_mrContext ------------------------------------------------------------------

AriaMRParser::Aria_mrContext::Aria_mrContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AriaMRParser::Aria_mrContext::EOF() {
  return getToken(AriaMRParser::EOF, 0);
}

std::vector<AriaMRParser::Distance_restraintsContext *> AriaMRParser::Aria_mrContext::distance_restraints() {
  return getRuleContexts<AriaMRParser::Distance_restraintsContext>();
}

AriaMRParser::Distance_restraintsContext* AriaMRParser::Aria_mrContext::distance_restraints(size_t i) {
  return getRuleContext<AriaMRParser::Distance_restraintsContext>(i);
}

std::vector<AriaMRParser::Old_distance_restraintsContext *> AriaMRParser::Aria_mrContext::old_distance_restraints() {
  return getRuleContexts<AriaMRParser::Old_distance_restraintsContext>();
}

AriaMRParser::Old_distance_restraintsContext* AriaMRParser::Aria_mrContext::old_distance_restraints(size_t i) {
  return getRuleContext<AriaMRParser::Old_distance_restraintsContext>(i);
}


size_t AriaMRParser::Aria_mrContext::getRuleIndex() const {
  return AriaMRParser::RuleAria_mr;
}


std::any AriaMRParser::Aria_mrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitAria_mr(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Aria_mrContext* AriaMRParser::aria_mr() {
  Aria_mrContext *_localctx = _tracker.createInstance<Aria_mrContext>(_ctx, getState());
  enterRule(_localctx, 0, AriaMRParser::RuleAria_mr);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(30);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == AriaMRParser::RefSpec

    || _la == AriaMRParser::P_code) {
      setState(28);
      _errHandler->sync(this);
      switch (_input->LA(1)) {
        case AriaMRParser::RefSpec: {
          setState(26);
          distance_restraints();
          break;
        }

        case AriaMRParser::P_code: {
          setState(27);
          old_distance_restraints();
          break;
        }

      default:
        throw NoViableAltException(this);
      }
      setState(32);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(33);
    match(AriaMRParser::EOF);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Distance_restraintsContext ------------------------------------------------------------------

AriaMRParser::Distance_restraintsContext::Distance_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AriaMRParser::Distance_restraintContext *> AriaMRParser::Distance_restraintsContext::distance_restraint() {
  return getRuleContexts<AriaMRParser::Distance_restraintContext>();
}

AriaMRParser::Distance_restraintContext* AriaMRParser::Distance_restraintsContext::distance_restraint(size_t i) {
  return getRuleContext<AriaMRParser::Distance_restraintContext>(i);
}


size_t AriaMRParser::Distance_restraintsContext::getRuleIndex() const {
  return AriaMRParser::RuleDistance_restraints;
}


std::any AriaMRParser::Distance_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitDistance_restraints(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Distance_restraintsContext* AriaMRParser::distance_restraints() {
  Distance_restraintsContext *_localctx = _tracker.createInstance<Distance_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 2, AriaMRParser::RuleDistance_restraints);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(36); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(35);
              distance_restraint();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(38); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 2, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Distance_restraintContext ------------------------------------------------------------------

AriaMRParser::Distance_restraintContext::Distance_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::RefSpec() {
  return getToken(AriaMRParser::RefSpec, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::RefSpecName() {
  return getToken(AriaMRParser::RefSpecName, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::RefPeak() {
  return getToken(AriaMRParser::RefPeak, 0);
}

std::vector<tree::TerminalNode *> AriaMRParser::Distance_restraintContext::Integer() {
  return getTokens(AriaMRParser::Integer);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::Integer(size_t i) {
  return getToken(AriaMRParser::Integer, i);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::Id() {
  return getToken(AriaMRParser::Id, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::D() {
  return getToken(AriaMRParser::D, 0);
}

std::vector<AriaMRParser::NumberContext *> AriaMRParser::Distance_restraintContext::number() {
  return getRuleContexts<AriaMRParser::NumberContext>();
}

AriaMRParser::NumberContext* AriaMRParser::Distance_restraintContext::number(size_t i) {
  return getRuleContext<AriaMRParser::NumberContext>(i);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::U() {
  return getToken(AriaMRParser::U, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::UViol() {
  return getToken(AriaMRParser::UViol, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::PViol() {
  return getToken(AriaMRParser::PViol, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::Viol() {
  return getToken(AriaMRParser::Viol, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::ViolFlag() {
  return getToken(AriaMRParser::ViolFlag, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::Reliable() {
  return getToken(AriaMRParser::Reliable, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::ReliableFlag() {
  return getToken(AriaMRParser::ReliableFlag, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::AType() {
  return getToken(AriaMRParser::AType, 0);
}

tree::TerminalNode* AriaMRParser::Distance_restraintContext::ATypeFlag() {
  return getToken(AriaMRParser::ATypeFlag, 0);
}

std::vector<AriaMRParser::ContributionContext *> AriaMRParser::Distance_restraintContext::contribution() {
  return getRuleContexts<AriaMRParser::ContributionContext>();
}

AriaMRParser::ContributionContext* AriaMRParser::Distance_restraintContext::contribution(size_t i) {
  return getRuleContext<AriaMRParser::ContributionContext>(i);
}


size_t AriaMRParser::Distance_restraintContext::getRuleIndex() const {
  return AriaMRParser::RuleDistance_restraint;
}


std::any AriaMRParser::Distance_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitDistance_restraint(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Distance_restraintContext* AriaMRParser::distance_restraint() {
  Distance_restraintContext *_localctx = _tracker.createInstance<Distance_restraintContext>(_ctx, getState());
  enterRule(_localctx, 4, AriaMRParser::RuleDistance_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(40);
    match(AriaMRParser::RefSpec);
    setState(41);
    match(AriaMRParser::RefSpecName);
    setState(42);
    match(AriaMRParser::RefPeak);
    setState(43);
    match(AriaMRParser::Integer);
    setState(44);
    match(AriaMRParser::Id);
    setState(45);
    match(AriaMRParser::Integer);
    setState(46);
    match(AriaMRParser::D);
    setState(47);
    number();
    setState(48);
    match(AriaMRParser::U);
    setState(49);
    number();
    setState(50);
    match(AriaMRParser::UViol);
    setState(51);
    number();
    setState(52);
    match(AriaMRParser::PViol);
    setState(53);
    number();
    setState(54);
    match(AriaMRParser::Viol);
    setState(55);
    match(AriaMRParser::ViolFlag);
    setState(56);
    match(AriaMRParser::Reliable);
    setState(57);
    match(AriaMRParser::ReliableFlag);
    setState(58);
    match(AriaMRParser::AType);
    setState(59);
    match(AriaMRParser::ATypeFlag);
    setState(61); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(60);
      contribution();
      setState(63); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == AriaMRParser::Simple_name);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ContributionContext ------------------------------------------------------------------

AriaMRParser::ContributionContext::ContributionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AriaMRParser::Atom_pairContext* AriaMRParser::ContributionContext::atom_pair() {
  return getRuleContext<AriaMRParser::Atom_pairContext>(0);
}

tree::TerminalNode* AriaMRParser::ContributionContext::D() {
  return getToken(AriaMRParser::D, 0);
}

std::vector<AriaMRParser::Number_cContext *> AriaMRParser::ContributionContext::number_c() {
  return getRuleContexts<AriaMRParser::Number_cContext>();
}

AriaMRParser::Number_cContext* AriaMRParser::ContributionContext::number_c(size_t i) {
  return getRuleContext<AriaMRParser::Number_cContext>(i);
}

tree::TerminalNode* AriaMRParser::ContributionContext::PlusMinus() {
  return getToken(AriaMRParser::PlusMinus, 0);
}

tree::TerminalNode* AriaMRParser::ContributionContext::Weight() {
  return getToken(AriaMRParser::Weight, 0);
}


size_t AriaMRParser::ContributionContext::getRuleIndex() const {
  return AriaMRParser::RuleContribution;
}


std::any AriaMRParser::ContributionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitContribution(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::ContributionContext* AriaMRParser::contribution() {
  ContributionContext *_localctx = _tracker.createInstance<ContributionContext>(_ctx, getState());
  enterRule(_localctx, 6, AriaMRParser::RuleContribution);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    atom_pair();
    setState(73);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == AriaMRParser::D) {
      setState(66);
      match(AriaMRParser::D);
      setState(67);
      number_c();
      setState(68);
      match(AriaMRParser::PlusMinus);
      setState(69);
      number_c();
      setState(70);
      match(AriaMRParser::Weight);
      setState(71);
      number_c();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Atom_pairContext ------------------------------------------------------------------

AriaMRParser::Atom_pairContext::Atom_pairContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AriaMRParser::Atom_selectionContext *> AriaMRParser::Atom_pairContext::atom_selection() {
  return getRuleContexts<AriaMRParser::Atom_selectionContext>();
}

AriaMRParser::Atom_selectionContext* AriaMRParser::Atom_pairContext::atom_selection(size_t i) {
  return getRuleContext<AriaMRParser::Atom_selectionContext>(i);
}

tree::TerminalNode* AriaMRParser::Atom_pairContext::Hyphen() {
  return getToken(AriaMRParser::Hyphen, 0);
}


size_t AriaMRParser::Atom_pairContext::getRuleIndex() const {
  return AriaMRParser::RuleAtom_pair;
}


std::any AriaMRParser::Atom_pairContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitAtom_pair(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Atom_pairContext* AriaMRParser::atom_pair() {
  Atom_pairContext *_localctx = _tracker.createInstance<Atom_pairContext>(_ctx, getState());
  enterRule(_localctx, 8, AriaMRParser::RuleAtom_pair);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(75);
    atom_selection();
    setState(76);
    match(AriaMRParser::Hyphen);
    setState(77);
    atom_selection();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Atom_selectionContext ------------------------------------------------------------------

AriaMRParser::Atom_selectionContext::Atom_selectionContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> AriaMRParser::Atom_selectionContext::Simple_name() {
  return getTokens(AriaMRParser::Simple_name);
}

tree::TerminalNode* AriaMRParser::Atom_selectionContext::Simple_name(size_t i) {
  return getToken(AriaMRParser::Simple_name, i);
}


size_t AriaMRParser::Atom_selectionContext::getRuleIndex() const {
  return AriaMRParser::RuleAtom_selection;
}


std::any AriaMRParser::Atom_selectionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitAtom_selection(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Atom_selectionContext* AriaMRParser::atom_selection() {
  Atom_selectionContext *_localctx = _tracker.createInstance<Atom_selectionContext>(_ctx, getState());
  enterRule(_localctx, 10, AriaMRParser::RuleAtom_selection);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    match(AriaMRParser::Simple_name);
    setState(80);
    match(AriaMRParser::Simple_name);
    setState(82);
    _errHandler->sync(this);

    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
    case 1: {
      setState(81);
      match(AriaMRParser::Simple_name);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Old_distance_restraintsContext ------------------------------------------------------------------

AriaMRParser::Old_distance_restraintsContext::Old_distance_restraintsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<AriaMRParser::Old_distance_restraintContext *> AriaMRParser::Old_distance_restraintsContext::old_distance_restraint() {
  return getRuleContexts<AriaMRParser::Old_distance_restraintContext>();
}

AriaMRParser::Old_distance_restraintContext* AriaMRParser::Old_distance_restraintsContext::old_distance_restraint(size_t i) {
  return getRuleContext<AriaMRParser::Old_distance_restraintContext>(i);
}


size_t AriaMRParser::Old_distance_restraintsContext::getRuleIndex() const {
  return AriaMRParser::RuleOld_distance_restraints;
}


std::any AriaMRParser::Old_distance_restraintsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitOld_distance_restraints(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Old_distance_restraintsContext* AriaMRParser::old_distance_restraints() {
  Old_distance_restraintsContext *_localctx = _tracker.createInstance<Old_distance_restraintsContext>(_ctx, getState());
  enterRule(_localctx, 12, AriaMRParser::RuleOld_distance_restraints);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(85); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(84);
              old_distance_restraint();
              break;
            }

      default:
        throw NoViableAltException(this);
      }
      setState(87); 
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    } while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Old_distance_restraintContext ------------------------------------------------------------------

AriaMRParser::Old_distance_restraintContext::Old_distance_restraintContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

AriaMRParser::P_rowContext* AriaMRParser::Old_distance_restraintContext::p_row() {
  return getRuleContext<AriaMRParser::P_rowContext>(0);
}

AriaMRParser::A_rowContext* AriaMRParser::Old_distance_restraintContext::a_row() {
  return getRuleContext<AriaMRParser::A_rowContext>(0);
}

std::vector<AriaMRParser::C_rowContext *> AriaMRParser::Old_distance_restraintContext::c_row() {
  return getRuleContexts<AriaMRParser::C_rowContext>();
}

AriaMRParser::C_rowContext* AriaMRParser::Old_distance_restraintContext::c_row(size_t i) {
  return getRuleContext<AriaMRParser::C_rowContext>(i);
}


size_t AriaMRParser::Old_distance_restraintContext::getRuleIndex() const {
  return AriaMRParser::RuleOld_distance_restraint;
}


std::any AriaMRParser::Old_distance_restraintContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitOld_distance_restraint(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::Old_distance_restraintContext* AriaMRParser::old_distance_restraint() {
  Old_distance_restraintContext *_localctx = _tracker.createInstance<Old_distance_restraintContext>(_ctx, getState());
  enterRule(_localctx, 14, AriaMRParser::RuleOld_distance_restraint);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    p_row();
    setState(90);
    a_row();
    setState(92); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(91);
      c_row();
      setState(94); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == AriaMRParser::C_code);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- P_rowContext ------------------------------------------------------------------

AriaMRParser::P_rowContext::P_rowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AriaMRParser::P_rowContext::P_code() {
  return getToken(AriaMRParser::P_code, 0);
}

std::vector<tree::TerminalNode *> AriaMRParser::P_rowContext::Integer() {
  return getTokens(AriaMRParser::Integer);
}

tree::TerminalNode* AriaMRParser::P_rowContext::Integer(size_t i) {
  return getToken(AriaMRParser::Integer, i);
}

std::vector<tree::TerminalNode *> AriaMRParser::P_rowContext::Float() {
  return getTokens(AriaMRParser::Float);
}

tree::TerminalNode* AriaMRParser::P_rowContext::Float(size_t i) {
  return getToken(AriaMRParser::Float, i);
}

tree::TerminalNode* AriaMRParser::P_rowContext::Real() {
  return getToken(AriaMRParser::Real, 0);
}

std::vector<tree::TerminalNode *> AriaMRParser::P_rowContext::Hyphen() {
  return getTokens(AriaMRParser::Hyphen);
}

tree::TerminalNode* AriaMRParser::P_rowContext::Hyphen(size_t i) {
  return getToken(AriaMRParser::Hyphen, i);
}


size_t AriaMRParser::P_rowContext::getRuleIndex() const {
  return AriaMRParser::RuleP_row;
}


std::any AriaMRParser::P_rowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitP_row(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::P_rowContext* AriaMRParser::p_row() {
  P_rowContext *_localctx = _tracker.createInstance<P_rowContext>(_ctx, getState());
  enterRule(_localctx, 16, AriaMRParser::RuleP_row);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(96);
    match(AriaMRParser::P_code);
    setState(97);
    match(AriaMRParser::Integer);
    setState(98);
    match(AriaMRParser::Integer);
    setState(99);
    match(AriaMRParser::Integer);
    setState(100);
    match(AriaMRParser::Float);
    setState(101);
    match(AriaMRParser::Real);
    setState(102);
    match(AriaMRParser::Hyphen);
    setState(103);
    match(AriaMRParser::Hyphen);
    setState(104);
    match(AriaMRParser::Hyphen);
    setState(105);
    match(AriaMRParser::Hyphen);
    setState(106);
    match(AriaMRParser::Float);
    setState(107);
    match(AriaMRParser::Float);
    setState(108);
    match(AriaMRParser::Float);
    setState(109);
    match(AriaMRParser::Hyphen);
    setState(110);
    match(AriaMRParser::Float);
    setState(111);
    match(AriaMRParser::Float);
    setState(112);
    match(AriaMRParser::Float);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- A_rowContext ------------------------------------------------------------------

AriaMRParser::A_rowContext::A_rowContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* AriaMRParser::A_rowContext::A_code() {
  return getToken(AriaMRParser::A_code, 0);
}

std::vector<tree::TerminalNode *> AriaMRParser::A_rowContext::Integer() {
  return getTokens(AriaMRParser::Integer);
}

tree::TerminalNode* AriaMRParser::A_rowContext::Integer(size_t i) {
  return getToken(AriaMRParser::Integer, i);
}

std::vector<tree::TerminalNode *> AriaMRParser::A_rowContext::Float() {
  return getTokens(AriaMRParser::Float);
}

tree::TerminalNode* AriaMRParser::A_rowContext::Float(size_t i) {
  return getToken(AriaMRParser::Float, i);
}

std::vector<tree::TerminalNode *> AriaMRParser::A_rowContext::Real() {
  return getTokens(AriaMRParser::Real);
}

tree::TerminalNode* AriaMRParser::A_rowContext::Real(size_t i) {
  return getToken(AriaMRParser::Real, i);
}


size_t AriaMRParser::A_rowContext::getRuleIndex() const {
  return AriaMRParser::RuleA_row;
}


std::any AriaMRParser::A_rowContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<AriaMRParserVisitor*>(visitor))
    return parserVisitor->visitA_row(this);
  else
    return visitor->visitChildren(this);
}

AriaMRParser::A_rowContext* AriaMRParser::a_row() {
  A_rowContext *_localctx = _tracker.createInstance<A_rowContext>(_ctx, getState());
  enterRule(_localctx, 18, AriaMRParser::RuleA_row);
